--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Google Fonts (Poppins) */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +9,7 @@
     list-style: none;
     border: none;
     outline: none;
+    font-family: "Poppins", sans-serif;
 }
 
 :root {
