--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,70 @@
 ::placeholder {
     color: var(--white-color);
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    color: var(--white-color);
+    overflow: hidden;
+    background: seagreen;
+}
+
+p {
+    font-size: 1.6rem;
+}
+
+/* --########## Navbar ##########-- */
+.nav {
+    position: fixed;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 40rem;
+    padding: 2rem 0;
+    background: var(--nav-bg-color);
+    border-radius: 5rem;
+    z-index: 100;
+}
+
+.nav .nav-list {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nav-list li {
+    position: relative;
+    display: flex;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.nav-list li:hover,
+.nav-list li.active {
+    color: var(--main-color);
+}
+
+.tooltip {
+    position: absolute;
+    top: -4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0.3rem 1rem;
+    background: var(--main-color);
+    border-radius: 0.4rem;
+    font-size: 1.6rem;
+    color: var(--bg-color);
+    font-weight: 500;
+    white-space: nowrap;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.nav-list li:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
